--- a/conf/Dockerfile
+++ b/conf/Dockerfile
@@ -5,8 +5,8 @@ RUN apt-get install curl -qq -y
 RUN apt-get install python -qq -y
 RUN apt-get -y install gcc python-dev libxml2-dev libxslt-dev git python-setuptools zlib1g-dev
 RUN easy_install pip
-RUN install lxml
-RUN install shortuuid
+RUN pip install lxml
+RUN pip install shortuuid
 RUN pip install psutil
 RUN git clone https://git.assembla.com/cloudscraper.minpad.git
 
